4601 Fix evaluator evaluating both true and false branches in condition task dispatcher
Prevent eager evaluation of sub-task expressions in conditional task dispatchers
(condition, branch, on-error). Before this fix, TaskExecution.evaluate() recursively
resolved all parameter values including sub-task definitions in both branches, corrupting
expressions with wrong context values before the condition was checked.

Introduces DeferredEvaluationParameterKeys registry where task dispatchers declare which
parameter keys contain sub-task definitions. TaskExecution.evaluate() extracts these before
evaluation and restores the originals after, so sub-task expressions remain intact until
the selected branch is dispatched.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>